# spr26-Team-16

./: .gitignore  AalaapSCWG  CLAUDE.md  PRD.md  PhillipSCWG  README.md  RominaSCWG  contexthub-extraction-spec.md  contexthub-v1-prd.md  package.json  pnpm-lock.yaml  pyproject.toml
backend/: .env_sample  alembic.ini  database.py  extraction.py  main.py  models.py  pyproject.toml  requirements.txt  stub_server.py  test_backend.py  test_extension.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  004_fix_rls_with_check.py  005_retention_indexes.py  006_push_shares.py  007_pull_target_platforms.py
backend/contexthub_backend/: __init__.py  config.py
backend/contexthub_backend/api/: app.py  errors.py
backend/contexthub_backend/api/routes/: admin.py  auth.py  extension_pairing.py  health.py  me_bootstrap.py  pulls.py  pushes.py  shares.py
backend/contexthub_backend/auth/: dependencies.py  jwt.py  rls.py
backend/contexthub_backend/db/: __init__.py  base.py  models.py  short_id.py
backend/contexthub_backend/ingress/: scrub.py
backend/contexthub_backend/jobs/: tasks.py  worker.py
backend/contexthub_backend/providers/: __init__.py  anthropic_provider.py  factory.py  prompt_registry.py  vercel_gateway.py  voyage.py  voyage_provider.py
backend/contexthub_backend/schemas/: pulls.py  pushes.py  search.py  shares.py
backend/contexthub_backend/services/: context_builder.py  egress.py  embeddings.py  observability.py  retention.py  storage.py  summarizer.py
backend/scripts/: gen_fixtures.py
backend/sql/: auth_stub.sql
backend/tests/: conftest.py  test_admin_routes.py  test_auth_api.py  test_auth_unit.py  test_google_auth_api.py  test_migrations.py  test_models.py  test_observability.py  test_providers_unit.py  test_requeue_push_job.py  test_retention_jobs.py  test_retention_service.py  test_search_service.py  test_shares_api.py  test_short_id.py  test_supabase_jwt_unit.py  test_worker_settings.py
backend/tests/fixtures/: vercel_gateway_chat_push.json
contexthub/: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
contexthub/.github/workflows/: ci.yml
contexthub/backend/: .env_sample  docker-compose.yml  pyproject.toml
contexthub/backend/.contexthub_storage/22222222-2222-2222-2222-222222222222/: 019dbe60-1942-743e-80e2-6864c6c9c220.json  019dc77a-4bd8-73f6-b3b7-4175fed1733b.json  019dd256-5a9f-797e-b128-73cd5e98f7cb.json
contexthub/backend/.contexthub_storage/fa586104-1428-49d7-9dd5-bff7d497c005/: 019dbe33-fc49-75d3-8d69-eb2648f9fd0d.json
contexthub/backend/contexthub_backend/: config.py
contexthub/backend/scripts/: gen_fixtures.py  seed_dev.py
contexthub/backend/tests/: conftest.py  test_auth_api.py  test_auth_unit.py  test_google_auth_unit.py  test_migrations.py  test_models.py  test_pin_api.py  test_providers_contract.py  test_providers_unit.py  test_pushes_api.py  test_rls.py  test_short_id.py  test_summarizer_markdown.py  test_supabase_jwt_unit.py
contexthub/docs/: ARCHITECTURE.md  LOCAL_SYSTEM_TEST.md  PLAN.md  START_FROM_SCRATCH.md  TODO.md  VALIDATION.md  integration with 4-8.md  renderer-spec.md
dashboard/: index.html  (+3 more)
(+73 files in other folders)
