[project]
name = "contexthub-backend"
version = "0.1.0"
description = "ContextHub API + worker backend"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.2",
    "fastapi>=0.115",
    "PyJWT>=2.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "faker>=24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a live DB (deselect with -m 'not integration')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contexthub_backend"]
